assets/main.css
/* --- Global --- */
html {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}

select,
button,
input {
  font-family: inherit;
}

button {
  cursor: pointer;
}

button:focus-visible {
  outline: 2px solid #c6b31d;
}

a {
  color: #494525;
}

/* --- Search bar section --- */
.main-search {
  border-bottom: 1px solid #aaa;
  padding: 0 1rem;
  outline: 0;
  height: 2rem;
  display: flex;
  align-items: center;
}

.main-search svg {
  height: 50%;
  margin-left: -0.05rem;
}

.main-search__input {
  margin-left: 0.5rem;
  font-size: inherit;
  height: 100%;
  border: 0;
  flex-grow: 1;
}

.main-search:focus-within {
  border-bottom-color: #c6b31d;
  outline: 1px solid #c6b31d;
}

.main-search__input:focus-within {
  outline: 0;
}

/* --- Toolbar section --- */
.toolbar {
  margin: 1rem 1rem 1rem 1rem;
}

select {
  background: white;
  border: #aaa 1px solid;
  font-size: 0.8rem;
  line-height: 1rem;
  padding: 0.25em;
  border-radius: 4px;
}

select:focus-visible {
  outline: 2px solid #c6b31d;
}

.page-btn {
  min-width: 1.5rem;
  height: 1.5rem;
  font-size: 0.8rem;
  border: #aaa 1px solid;
  background: none;
  border-radius: 4px;
  color: black;
}

.page-btn--active {
  font-weight: 900;
}

.page-btn:disabled {
  opacity: 0.3;
}

/* --- Card section --- */
.card-container {
  margin: -1em 0;
  padding: 0.5em;
  display: flex;
  flex-wrap: wrap;
}

.card {
  /* To improve performance. Because of it,
  width and height are required.
  Height has to be calculated manually. */
  contain: strict;
  width: 100%;
  height: 24rem;
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
  margin: 0.5em;

  /* Remove default button styles. */
  font-size: inherit;
  padding: 0;
  border: 0;
  background: none;
}

.card__content {
  margin: 1em;
}

.card__image {
  width: 13rem;
  height: 13rem;
  margin: auto;
  background-size: contain;
}

.card h1 {
  text-align: center;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 1.6rem;
  margin: 0.5em 0;
}

table {
  width: 100%;
  border-collapse: collapse;
  table-layout: fixed;
}

td {
  padding: 0.25rem;
  border: 1px solid #ddd;
  text-align: left;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

/* --- Pokemon details dialog --- */
.pokemon-details__container {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.7);
  overflow-y: auto;
  padding: 1rem;
  display: none;
}

.pokemon-details__container--open {
  display: block;
}

.pokemon-details {
  border-radius: 4px;
  margin: auto;
  background: white;
  padding: 1rem;
  max-width: 40rem;
  position: relative;
}

.pokemon-details__close {
  margin-bottom: 1rem;
}

.pokemon-details__data {
  display: flex;
  flex-direction: column;
}

.pokemon-details img {
  max-height: 20rem;
  margin: auto;
}

.pokemon-details table {
  flex-grow: auto;
}

@media screen and (min-width: 36rem) {
  .card {
    width: calc(50% - 1rem);
  }

  .pokemon-details__data {
    display: flex;
    flex-direction: row;
  }

  .pokemon-details__image {
    min-width: 15rem;
    margin-right: 1rem;
  }
}

@media screen and (min-width: 54rem) {
  .card {
    width: calc(33.333% - 1rem);
  }
}

@media screen and (min-width: 72rem) {
  main {
    margin: auto;
    width: 60em;
  }

  .main-search {
    border-left: 1px solid #aaa;
    border-right: 1px solid #aaa;
  }

  .card-container {
    padding: 0;
    margin: -0.5em;
  }
}

